--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
                                 </ul>
                             </div>
 <style>
-  /* Estilo para tornar a imagem branca */
-  .imagem-branca {
-    filter: brightness(0) invert(1);
-  }
+
 </style>
                         </nav>
                     </div>
@@ -63,8 +60,10 @@
                             <h2>
                                 Para realizar o pagamento, utilize o QRCode.
                             </h2>
-                             <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/QR_code_for_mobile_English_Wikipedia.svg" alt="Imagem Branca" class="imagem-branca">
-                                    
+                             <img src="https://cdn.discordapp.com/attachments/1148683758472540311/1150082365205532702/image.png" alt="Imagem Branca" class="imagem-branca">
+	<br>
+	<br>
+                                <h6>assim que pagar, abra um ticket no nosso Discord com o comprovante.</h6> 
 			</center>
                         </div>
                        
@@ -115,6 +114,9 @@
 
     <section class="faqs">
         <div class="container">
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
